==> maurocarlier/Game-Tech/Opdracht2/x-cube-irremote/Projects/Common_IR/src/rc5_decode.c <==
#include "main.h"
#define RC5_1T_TIME                          ((uint8_t)0x00)
#define RC5_2T_TIME                          ((uint8_t)0x01)
#define RC5_WRONG_TIME                       ((uint8_t)0xFF)
#define RC5_TIME_OUT_US                      ((uint32_t)3600)
#define RC5_T_US                             ((uint32_t)900)     /*!< Half bit period */
#define RC5_T_TOLERANCE_US                   ((uint32_t)300)    /*!< Tolerance time */
#define RC5_NUMBER_OF_VALID_PULSE_LENGTH     ((uint8_t)2)
#define RC5_PACKET_BIT_COUNT                 ((uint8_t)13)      /*!< Total bits */
#define RC5_PACKET_STATUS_EMPTY              ((uint8_t)(1 << 0))

void Menu_RC5Decode_Func(void)
{
  while (Menu_ReadKey() != NOKEY)
  {}
  /* Clear the LCD */
  BSP_LCD_Clear(LCD_COLOR_WHITE);

  BSP_LCD_SetFont(&Font24);
  /* Set the LCD Back Color */
  BSP_LCD_SetBackColor(LCD_COLOR_BLUE);
  /* Set the LCD Text Color */
  BSP_LCD_SetTextColor(LCD_COLOR_WHITE);
  BSP_LCD_DisplayStringAtLine(0, (uint8_t*)"   RC5 Receiver   ");
  BSP_LCD_DisplayStringAtLine(9, (uint8_t*)"Press Key to exit ");

  /* Set the LCD Back Color */
  BSP_LCD_SetBackColor(LCD_COLOR_WHITE);
  /* Set the LCD Text Color */
  BSP_LCD_SetTextColor(LCD_COLOR_BLACK);

  /* Initialize the InfraRed application: RC5 */
  RFDemoStatus = RC5_DEC;
  RC5_Init();

  while (Menu_ReadKey() != KEY)
  {
    /* Decode the RC5 frame */
    RC5_Decode(&RC5_FRAME);
  }
  /* Clear LCD */
  BSP_LCD_Clear(LCD_COLOR_WHITE);

  /* Exit the RF5 demo */
  RFDemoStatus = NONE;
  RC5_DeInit();

  /* Enable the JoyStick interrupt */
  HAL_NVIC_EnableIRQ(LEFT_JOY_EXTI_IRQn);

  /* Display menu */
  Menu_DisplayMenu();
}

void RC5_DeInit(void)
{
  HAL_TIM_IC_DeInit(&TimHandleDEC);
  HAL_GPIO_DeInit(IR_GPIO_PORT, IR_GPIO_PIN);
}

void RC5_Init(void)
{
  GPIO_InitTypeDef gpio_init_struct;
  TIM_IC_InitTypeDef tim_ic_init;
  TIM_SlaveConfigTypeDef tim_slave_conf;
  TIM_MasterConfigTypeDef tim_master_conf;

  /*  Clock Configuration for TIMER */
  IR_TIM_CLK();

  TimHandleDEC.Instance = IR_TIM;

  /* Enable Button GPIO clock */
  IR_GPIO_PORT_CLK();

  /* Pin configuration: input floating */
  gpio_init_struct.Pin = IR_GPIO_PIN;
  gpio_init_struct.Mode = GPIO_MODE_AF_OD;
  gpio_init_struct.Pull = GPIO_NOPULL;
  gpio_init_struct.Speed = GPIO_SPEED_FREQ_HIGH;
  gpio_init_struct.Alternate = IR_GPIO_AF_REC;
  HAL_GPIO_Init(IR_GPIO_PORT, &gpio_init_struct);

  /* Enable the TIMx global Interrupt */
  HAL_NVIC_SetPriority(IR_TIM_IRQn, 0, 1);
  HAL_NVIC_EnableIRQ(IR_TIM_IRQn);

  /* Timer Clock */
  TIMCLKValueKHz = TIM_GetCounterCLKValue() / 1000;
  RC5TimeOut = TIMCLKValueKHz * RC5_TIME_OUT_US / 1000;

  TimHandleDEC.Init.ClockDivision = 0;
  TimHandleDEC.Init.CounterMode = 0;
  TimHandleDEC.Init.Period = RC5TimeOut;
  TimHandleDEC.Init.Prescaler = TIM_PRESCALER;
  TimHandleDEC.Init.RepetitionCounter = 0;
  HAL_TIM_IC_Init(&TimHandleDEC);

  /* TIM configuration */
  tim_ic_init.ICPolarity = TIM_ICPOLARITY_RISING;
  tim_ic_init.ICSelection = TIM_ICSELECTION_INDIRECTTI;
  tim_ic_init.ICPrescaler = TIM_ICPSC_DIV1;
  tim_ic_init.ICFilter = 0x0;
  HAL_TIM_IC_ConfigChannel(&TimHandleDEC, &tim_ic_init, IR_TIM_DEC_CHANNEL_B);
  tim_ic_init.ICPolarity = TIM_ICPOLARITY_FALLING;
  tim_ic_init.ICSelection = TIM_ICSELECTION_DIRECTTI;
  HAL_TIM_IC_ConfigChannel(&TimHandleDEC, &tim_ic_init, IR_TIM_DEC_CHANNEL_A);

  tim_slave_conf.InputTrigger = IR_TIM_DEC_TRIGGER;
  tim_slave_conf.SlaveMode = TIM_SLAVEMODE_RESET;
  tim_slave_conf.TriggerPolarity = TIM_TRIGGERPOLARITY_FALLING;
  tim_slave_conf.TriggerFilter = 0;
  HAL_TIM_SlaveConfigSynchro( &TimHandleDEC, &tim_slave_conf);

  /* Enable the Master/Slave Mode */
  tim_master_conf.MasterSlaveMode = TIM_SMCR_MSM;
  tim_master_conf.MasterOutputTrigger = 0;
  HAL_TIMEx_MasterConfigSynchronization( &TimHandleDEC, &tim_master_conf);

  /* Configures the TIM Update Request Interrupt source: counter overflow */
  __HAL_TIM_URS_ENABLE(&TimHandleDEC);

  /* Clear update flag */
  __HAL_TIM_CLEAR_FLAG( &TimHandleDEC, TIM_FLAG_UPDATE);

  /* Enable TIM Update Event Interrupt Request */
  /* Enable the CC2/CC1 Interrupt Request */
  __HAL_TIM_ENABLE_IT( &TimHandleDEC, TIM_FLAG_UPDATE | TIM_IT_CC1 | TIM_IT_CC2);

  /* Enable the timer */
  __HAL_TIM_ENABLE(&TimHandleDEC);

  if (HAL_TIM_IC_Start_IT(&TimHandleDEC, IR_TIM_DEC_CHANNEL_A) != HAL_OK)
  {
    /* Starting Error */
    while (1)
    {}
  }

  if (HAL_TIM_IC_Start_IT(&TimHandleDEC, IR_TIM_DEC_CHANNEL_B) != HAL_OK)
  {
    /* Starting Error */
    while (1)
    {}
  }

  /* Bit time range */
  RC5MinT = (RC5_T_US - RC5_T_TOLERANCE_US) * TIMCLKValueKHz / 1000;
  RC5MaxT = (RC5_T_US + RC5_T_TOLERANCE_US) * TIMCLKValueKHz / 1000;
  RC5Min2T = (2 * RC5_T_US - RC5_T_TOLERANCE_US) * TIMCLKValueKHz / 1000;
  RC5Max2T = (2 * RC5_T_US + RC5_T_TOLERANCE_US) * TIMCLKValueKHz / 1000;

  /* Default state */
  RC5_ResetPacket();
}

void RC5_Decode(RC5_Frame_t *pIRFrame)
{
  /* If frame received */
  if (RC5FrameReceived != NO)
  {
    RC5_Data = RC5TmpPacket.data ;
    /* RC5 frame field decoding */
    pIRFrame->FieldBit = (RC5TmpPacket.data >> 12) & 0x1;
    pIRFrame->ToggleBit = (RC5TmpPacket.data >> 11) & 0x1;
    pIRFrame->Address = (RC5TmpPacket.data >> 6) & 0x1F;
    pIRFrame->Command = (uint8_t)((RC5TmpPacket.data) & (uint8_t) 0x3F);

    /* Check if command ranges between 64 to 127:Upper Field */
    if (((RC5TmpPacket.data >> 12) & 0x1) != 0x01)
    {
      pIRFrame->Command =  (1 << 6) | pIRFrame->Command;
    }
    /* Default state */
    RC5FrameReceived = NO;
    RC5_ResetPacket();

    /* Display RC5 message */
    BSP_LCD_SetFont(&Font20);
    BSP_LCD_DisplayStringAtLine(6, (uint8_t*)aRC5Commands[pIRFrame->Command]);
    BSP_LCD_DisplayStringAtLine(7, (uint8_t*)aRC5Devices[pIRFrame->Address]);
    BSP_LCD_SetFont(&Font24);
  }
}

void RC5_DataSampling(uint32_t rawPulseLength, uint32_t edge)
{
  uint8_t pulse;
  RC5_lastBit_t tmp_bit;

  /* Decode the pulse length in protocol units */
  pulse = RC5_GetPulseLength(rawPulseLength);

  /* On Rising Edge */
  if (edge == 1)
  {
    if (pulse <= RC5_2T_TIME)
    {
      /* Bit determination by the rising edge */
      tmp_bit = RC5_logicTableRisingEdge[RC5TmpPacket.lastBit][pulse];
      RC5_modifyLastBit (tmp_bit);
    }
    else
    {
      RC5_ResetPacket();
    }
  }
  else     /* On Falling Edge */
  {
    /* If this is the first falling edge - don't compute anything */
    if (RC5TmpPacket.status & RC5_PACKET_STATUS_EMPTY)
    {
      RC5TmpPacket.status &= (uint8_t)~RC5_PACKET_STATUS_EMPTY;
    }
    else
    {
      if (pulse <= RC5_2T_TIME)
      {
        /* Bit determination by the falling edge */
        tmp_bit = RC5_logicTableFallingEdge[RC5TmpPacket.lastBit][pulse];
        RC5_modifyLastBit (tmp_bit);
      }
      else
      {
        RC5_ResetPacket();
      }
    }
  }
}
